# librandom

./: CMakeLists.txt  SharemindLibRandomConfig.cmake.in  SharemindLibRandomConfigVersion.cmake.in
src/: AESRandomEngine.cpp  AESRandomEngine.h  AesRandomEngine.cpp  AesRandomEngine.h  AutoSeededRandom.cpp  AutoSeededRandom.h  ChaCha20RandomEngine.cpp  ChaCha20RandomEngine.h  CryptographicRandom.cpp  CryptographicRandom.h  FastRandom.cpp  FastRandom.h  IRandom.cpp  IRandom.h  NullRandomEngine.cpp  NullRandomEngine.h  OpenSSLInit.cpp  OpenSSLRandomEngine.cpp  OpenSSLRandomEngine.h  OpenSslInit.cpp  OpenSslRandomEngine.cpp  Random.cpp  Random.h  RandomBufferAgent.cpp  RandomBufferAgent.h  RandomEngine.cpp  RandomEngine.h  RandomEngineFacade.h  RandomEngineFactory.cpp  RandomEngineFactory.h  RandomFacility.cpp  RandomFacility.h  RandomnessCache.cpp  RandomnessCache.h  SNOW2RandomEngine.cpp  SNOW2RandomEngine.h  Snow2RandomEngine.cpp  Snow2RandomEngine.h  librandom.h  snow2_fast.c  (+2 more)
tests/: TestAesRandomEngine.cpp  TestChaCha20RandomEngine.cpp
